5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4016/executions/1616_2947.log
== TEST (2019-04-01 14:18:27) 
-- CODE:
lado_a= a**2
lado_b= b**2



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    lado_a= a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:18:39) 
-- CODE:
lado_a= 2**2
lado_b= 2**2



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    lado_a= a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:19:05) 
-- CODE:
lado_a= 2**4
lado_b= 2**2



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    lado_a= a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:19:12) 
-- CODE:
lado_a= 2**4



-- EXECUTION TIME:
0.174683
-- TEST CASE 1:
---- input:
8
10
60
---- correct output:
9.17
---- user output:

-- TEST CASE 2:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:19:12) 
-- CODE:
lado_a= 2**4



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    lado_a= a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:19:13) 
-- CODE:
lado_a= 2**4



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    lado_a= a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:19:13) 
-- CODE:
lado_a= 2**4



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    lado_a= a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:19:14) 
-- CODE:
lado_a= 2**4



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    lado_a= a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:19:24) 
-- CODE:
a= 2**4



-- EXECUTION TIME:
0.131953
-- TEST CASE 1:
---- input:
8
10
60
---- correct output:
9.17
---- user output:

-- TEST CASE 2:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:19:25) 
-- CODE:
a= 2**4



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    lado_a= a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:19:26) 
-- CODE:
a= 2**4



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    lado_a= a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:19:39) 
-- CODE:
round(2**2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    lado_a= a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:19:40) 
-- CODE:
round(2**2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    lado_a= a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:19:51) 
-- CODE:
print(round(2**2))


-- EXECUTION TIME:
0.124704
-- TEST CASE 1:
---- input:
8
10
60
---- correct output:
9.17
---- user output:
4
-- TEST CASE 2:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:19:51) 
-- CODE:
print(round(2**2))


-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:20:12) 
-- CODE:
print(round(12**1))


-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:20:20) 
-- CODE:
print(round(12.5**1))


-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:20:22) 
-- CODE:
print(round(12.5**1))


-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:20:22) 
-- CODE:
print(round(12.5**1))


-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:20:23) 
-- CODE:
print(round(12.5**1))


-- EXECUTION TIME:
0.208674
-- TEST CASE 1:
---- input:
8
10
60
---- correct output:
9.17
---- user output:
12
-- TEST CASE 2:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:20:24) 
-- CODE:
print(round(12.5**1))


-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:34:28) 
-- CODE:
ladob=3/2
ladoc=
angulo=


-- ERROR:
File "XXXX", line 2
    ladoc=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:34:35) 
-- CODE:
ladob=3/6
ladoc=
angulo=


-- ERROR:
File "XXXX", line 2
    ladoc=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:35:20) 
-- CODE:
ladob=
ladoc=
angulo=
print(round(ladoa, ladob, angulo))


-- ERROR:
File "XXXX", line 1
    ladob=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:35:44) 
-- CODE:
ladob=3**3
ladoc=
angulo=
print(round(ladoa, ladob, angulo))


-- ERROR:
File "XXXX", line 2
    ladoc=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:35:45) 
-- CODE:
ladob=3**3
ladoc=
angulo=
print(round(ladoa, ladob, angulo))


-- ERROR:
File "XXXX", line 2
    ladoc=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:35:46) 
-- CODE:
ladob=3**3
ladoc=
angulo=
print(round(ladoa, ladob, angulo))


-- ERROR:
File "XXXX", line 2
    ladoc=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:35:46) 
-- CODE:
ladob=3**3
ladoc=
angulo=
print(round(ladoa, ladob, angulo))


-- ERROR:
File "XXXX", line 2
    ladoc=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:36:39) 
-- CODE:
ladob=3/3
ladoc=
angulo=
print(round(ladoa, ladob, angulo))


-- ERROR:
File "XXXX", line 2
    ladoc=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:37:45) 
-- CODE:
ladob=12.05/1
ladoc=
angulo=
print(round(ladoa, ladob, angulo))


-- ERROR:
File "XXXX", line 2
    ladoc=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:08) 
-- CODE:
ladob=12.05/1
ladoc=17.2/1
angulo=
print(round(ladoa, ladob, angulo))


-- ERROR:
File "XXXX", line 3
    angulo=
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:38) 
-- CODE:
ladob=12.05/1
ladoc=17.2/1
angulo=64.9/1
print(round(ladoa, ladob, angulo))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(ladoa, ladob, angulo))
NameError: name 'ladoa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:39:36) 
-- CODE:
ladob=12.05/1
ladoc=17.02/1
angulo=64.09/1
print(round(ladoa, ladob, angulo))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(ladoa, ladob, angulo))
NameError: name 'ladoa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:39:38) 
-- CODE:
ladob=12.05/1
ladoc=17.02/1
angulo=64.09/1
print(round(ladoa, ladob, angulo))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(ladoa, ladob, angulo))
NameError: name 'ladoa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:40:02) 
-- CODE:
ladob=12.05/1
ladoc=17.02/1
angulo=64.09/1
print(round(ladoa,+ ladob, *angulo))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(ladoa,+ ladob, *angulo))
NameError: name 'ladoa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:40:03) 
-- CODE:
ladob=12.05/1
ladoc=17.02/1
angulo=64.09/1
print(round(ladoa,+ ladob, *angulo))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(ladoa,+ ladob, *angulo))
NameError: name 'ladoa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:40:14) 
-- CODE:
ladob=12.05/1
ladoc=17.02/1
angulo=64.09/1
print(round(ladoa+, ladob+, angulo))


-- ERROR:
File "XXXX", line 4
    print(round(ladoa+, ladob+, angulo))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:40:16) 
-- CODE:
ladob=12.05/1
ladoc=17.02/1
angulo=64.09/1
print(round(ladoa+, ladob+, angulo))


-- ERROR:
File "XXXX", line 4
    print(round(ladoa+, ladob+, angulo))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:40:19) 
-- CODE:
ladob=12.05/1
ladoc=17.02/1
angulo=64.09/1
print(round(ladoa+, ladob+, angulo))


-- EXECUTION TIME:
0.137204
-- ERROR:
  File "/home/codebench/codes/1616/2947/main.py", line 4
    print(round(ladoa+, ladob+, angulo))
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
